--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <ul class="navbar">
-        <li><a href="#" class="home">Anonymous</a></li>
+        <li><a href="#" class="home">Abdullah Ashfaq</a></li>
         <li><a href="#About" class="sidebtn1 right">About</a></li>
         <li><a href="#Portfolio" class="sidebtn2 right">Portfolio</a></li>
         <li><a href="#contact" class="sidebtn3 right">Contact us</a></li>
